cis-perf/yaml/zone1/20-ns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1100
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1100.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1101
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1101.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1102
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1102.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1103
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1103.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1104
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1104.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1105
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1105.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1106
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1106.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1107
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1107.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1108
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1108.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1109
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1109.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1110
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1110.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1111
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1111.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1112
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1112.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1113
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1113.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1114
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1114.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1115
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1115.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1116
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1116.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1117
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1117.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1118
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1118.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1119
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1119.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
